// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — nullable > nullable arrays > generates Array<T | null> | null for nullable array with nullable items 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableArrayItems = Array<string | null> | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable arrays > generates T[] | null for nullable array 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableArray = string[] | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable enum > generates enum union with null for nullable enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableStatus = 'active' | 'inactive' | 'pending' | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable inside composition > generates intersection type unioned with null for nullable allOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type Base = { id: string; };

export type Extended = (Base & ({ extra?: string | null; })) | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable inside composition > generates union type wrapped with | null for nullable anyOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableAnyOf = (string | boolean) | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable inside composition > generates union type wrapped with | null for nullable oneOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableOneOf = (string | number) | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable on object properties > generates nullable property on nested object 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type Outer = { inner?: { value?: string; } | null; };

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable on object properties > generates nullable property type inside interface 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type User = { name: string; nickname: string | null; age: number; };

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable primitives > generates boolean | null for nullable boolean 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableBool = boolean | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable primitives > generates number | null for nullable integer 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableInt = number | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable primitives > generates number | null for nullable number 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableNumber = number | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable primitives > generates string | null for nullable string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableString = string | null;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable without type > generates unknown for nullable schema without type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NullableUntyped = unknown;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable: false or absent > generates regular string type when nullable is false 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type NotNullable = string;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;

exports[`OpenAPI 3.0 — nullable > nullable: false or absent > generates regular type when nullable is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

export type RegularString = string;

export class StreamResponse {
  constructor(
    public readonly data: ReadableStream<Uint8Array>,
    public readonly filename?: string,
    public readonly headers: Record<string, string> = {},
  ) {}
}

export function streamResponse(
  data: ReadableStream<Uint8Array>,
  filename?: string,
  headers?: Record<string, string>,
): StreamResponse {
  return new StreamResponse(data, filename, headers ?? {});
}

export class ErrorResponse {
  constructor(
    public readonly status: number,
    public readonly data: unknown,
    public readonly headers: Record<string, string>,
    public readonly message?: string,
  ) {}
}

export function errorResponse(
  status: number,
  data: unknown,
  headers?: Record<string, string>,
  message?: string,
): ErrorResponse {
  return new ErrorResponse(status, data, headers ?? {}, message);
}

export class RequesterFailError extends Error {
  constructor(
    public readonly cause: unknown,
  ) {
    super(\`Request failed: \${cause instanceof Error ? cause.message : String(cause)}\`);
    this.name = "RequesterFailError";
  }
}

export class ApiError<TStatus extends number, TData> extends Error {
  constructor(
    public readonly status: TStatus,
    public readonly data: TData,
    message: string,
  ) {
    super(message);
    this.name = "ApiError";
  }
}

export class UnspecifiedApiError extends ApiError<number, unknown> {
  constructor(
    status: number,
    data: unknown,
    message: string,
  ) {
    super(status, data, message);
    this.name = "UnspecifiedApiError";
  }
}"
`;
